tests/export_type_specifier/export_type_specifier.exp
Error --------------------------------------------------------------------------------------------------- import.js:11:1

Cannot cast `t` to empty because string [1] is incompatible with empty [2]. [incompatible-type]

   import.js:11:1
   11| t as empty; // ERROR
       ^

References:
   import.js:9:18
    9| declare const t: T;
                        ^ [1]
   import.js:11:6
   11| t as empty; // ERROR
            ^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- import.js:15:1

Cannot cast `s` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   import.js:15:1
   15| s as empty; // ERROR
       ^

References:
   import.js:13:18
   13| declare const s: S;
                        ^ [1]
   import.js:15:6
   15| s as empty; // ERROR
            ^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- import.js:19:1

Cannot cast `r` to empty because boolean [1] is incompatible with empty [2]. [incompatible-type]

   import.js:19:1
   19| r as empty; // ERROR
       ^

References:
   import.js:17:18
   17| declare const r: R;
                        ^ [1]
   import.js:19:6
   19| r as empty; // ERROR
            ^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- import.js:23:1

Cannot cast `rt` to empty because string [1] is incompatible with empty [2]. [incompatible-type]

   import.js:23:1
   23| rt as empty; // ERROR
       ^^

References:
   import.js:21:19
   21| declare const rt: RenamedT;
                         ^^^^^^^^ [1]
   import.js:23:7
   23| rt as empty; // ERROR
             ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:20:1

The `type` keyword on named exports can only be used on regular `export` statements. It cannot be used with
`export type` statements. [unsupported-syntax]

   20| export type {type X}; // ERROR
       ^^^^^^^^^^^^^^^^^^^^^



Found 5 errors
